--- a/package.json
+++ b/package.json
@@ -201,7 +201,7 @@
     "prestart": "rm -rf .compiled-sources",
     "start": "hadron-build develop",
     "pretest": "mongodb-runner start --port 27017",
-    "test": "hadron-build test",
+    "test": "xvfb-maybe hadron-build test",
     "posttest": "mongodb-runner stop --port 27017",
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "clean": "hadron-build clean",
@@ -354,7 +354,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^19.3.0",
+    "hadron-build": "^20.0.0",
     "hadron-spectron": "^1.1.0",
     "jsdom": "^9.8.3",
     "mgeneratejs": "^0.2.0",
