--- a/package.json
+++ b/package.json
@@ -349,13 +349,13 @@
     "chai-enzyme": "1.0.0-beta.0",
     "cheerio": "^1.0.0-rc.2",
     "devtron": "^1.4.0",
-    "electron": "2.0.7",
+    "electron": "^3.0.6",
     "electron-devtools-installer": "^2.2.4",
     "electron-rebuild": "^1.8.2",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "eslint-config-mongodb-js": "^2.2.0",
-    "hadron-build": "^20.0.0",
+    "hadron-build": "^20.0.1",
     "hadron-spectron": "^5.0.0-beta.2",
     "jsdom": "^9.8.3",
     "mgeneratejs": "^0.2.0",
