Pin React at 16.4.2

--- a/package.json
+++ b/package.json
@@ -317,11 +317,11 @@
     "prop-types": "^15.5.8",
     "qs": "^5.2.0",
     "raf": "^3.1.0",
-    "react": "^16.4.0",
+    "react": "16.4.2",
     "react-ace": "^6.1.1",
     "react-bootstrap": "^0.32.1",
     "react-click-outside": "^2.2.0",
-    "react-dom": "^16.4.0",
+    "react-dom": "16.4.2",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
     "react-select-plus": "^1.2.0",
