--- a/package.json
+++ b/package.json
@@ -348,7 +348,7 @@
     "chai-enzyme": "1.0.0-beta.0",
     "cheerio": "^1.0.0-rc.2",
     "devtron": "^1.4.0",
-    "electron": "^3.0.6",
+    "electron": "3.0.6",
     "electron-devtools-installer": "^2.2.4",
     "electron-rebuild": "^1.8.2",
     "enzyme": "^3.7.0",
