COMPASS-3116: repro'd travis kerberos symbol error
Should fix

```
/home/travis/build/10gen/compass/node_modules/electron/dist/electron: symbol lookup error: /home/travis/build/10gen/compass/node_modules/kerberos/build/Release/kerberos.node: undefined symbol: _ZN2v816FunctionTemplate3NewEPNS_7IsolateEPFvRKNS_20FunctionCallbackInfoINS_5ValueEEEENS_5LocalIS4_EENSA_INS_9SignatureEEEiNS_19ConstructorBehaviorENS_14SideEffectTypeE
Failed with exit code: 1
Output:
npm ERR! Test failed.  See above for more details.
```

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,9 @@ script:
 # cache:
 #   directories:
 #     - '$HOME/.npm'
+#     - '$HOME/.electron'
+#     - './node_modules'
+# TODO
+# ${npm_config_cache}/_prebuilds
+# ${APP_DATA}/npm-cache/_prebuilds
+# ${HOME}/.npm/_prebuilds
