--- a/package.json
+++ b/package.json
@@ -348,6 +348,7 @@
     "chai-as-promised": "^7.1.0",
     "chai-enzyme": "1.0.0-beta.0",
     "cheerio": "^1.0.0-rc.2",
+    "cross-env": "^5.2.0",
     "devtron": "^1.4.0",
     "electron": "3.0.6",
     "electron-devtools-installer": "^2.2.4",
