--- a/package.json
+++ b/package.json
@@ -203,7 +203,7 @@
     "start": "hadron-build develop",
     "pretest": "mongodb-runner start --port 27017",
     "test": "xvfb-maybe hadron-build test",
-    "posttest": "mongodb-runner stop --port 27017",
+    "posttest": "cross-env DEBUG=* mongodb-runner stop --port 27017",
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
