--- a/.travis.yml
+++ b/.travis.yml
@@ -31,14 +31,10 @@ script:
 after_failure:
   - curl -sL https://raw.githubusercontent.com/travis-ci/artifacts/master/install | bash
   - export ARTIFACTS_PATHS="$HOME/.npm/_logs"
-  - ./artifacts upload
+  - artifacts upload
 
-# cache:
-#   directories:
-#     - '$HOME/.npm'
-#     - '$HOME/.electron'
-#     - './node_modules'
-# TODO
-# ${npm_config_cache}/_prebuilds
-# ${APP_DATA}/npm-cache/_prebuilds
-# ${HOME}/.npm/_prebuilds
+cache:
+  directories:
+    - '$HOME/.npm'
+    - '$HOME/.electron'
+    - './node_modules'
