--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - 10.2.1
 env:
   matrix:
-    - MONGODB_VERSION=3.4.x MONGODB_TOPOLOGY=standalone
+    - MONGODB_VERSION=stable MONGODB_TOPOLOGY=standalone
   global:
     secure: kx+3p/x5hEju6fKYzb0SCk9VJLq6bOxrizCQ/skvRB9OwiQUFm68KHDRys6DonUgudfJK9QF+2IvTPo7V+6bzh15hNDd4TnMuz/L9Fcb7+BwTENwjRKlWltuWBtLbJ+XxOeCAg2uWT7D8bH5S2NADIboIVUstAqNM9LKw9V9BVc=
 addons:
