--- a/package.json
+++ b/package.json
@@ -201,9 +201,9 @@
     "postinstall": "cross-env DEBUG=* electron-rebuild --force",
     "prestart": "rm -rf .compiled-sources",
     "start": "hadron-build develop",
-    "_pretest": "mongodb-runner start --port 27017",
+    "pretest": "cross-env DEBUG=* mongodb-runner start --port 27017",
     "test": "xvfb-maybe hadron-build test",
-    "_posttest": "cross-env DEBUG=* mongodb-runner stop --port 27017",
+    "posttest": "cross-env DEBUG=* mongodb-runner stop --port 27017",
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
