Is it a cache problem?

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,13 @@ before_script:
 script:
   - npm run check
   - npm test
-after_failure:
-  - curl -sL https://raw.githubusercontent.com/travis-ci/artifacts/master/install | bash
-  - export ARTIFACTS_PATHS="$HOME/.npm/_logs/*.log"
-  - artifacts upload
+# after_failure:
+#   - curl -sL https://raw.githubusercontent.com/travis-ci/artifacts/master/install | bash
+#   - export ARTIFACTS_PATHS="$HOME/.npm/_logs/*.log"
+#   - artifacts upload
 
-cache:
-  directories:
-    - '$HOME/.npm'
-    - '$HOME/.electron'
-    - './node_modules'
+# cache:
+#   directories:
+#     - '$HOME/.npm'
+#     - '$HOME/.electron'
+#     - './node_modules'
