--- a/package.json
+++ b/package.json
@@ -231,9 +231,9 @@
     "@mongodb-js/compass-collection-stats": "^3.1.0",
     "@mongodb-js/compass-connect": "^3.7.0",
     "@mongodb-js/compass-crud": "^5.6.1",
-    "@mongodb-js/compass-deployment-awareness": "^6.2.0",
+    "@mongodb-js/compass-deployment-awareness": "^6.3.0",
     "@mongodb-js/compass-document-validation": "^8.1.0",
-    "@mongodb-js/compass-export-to-language": "^2.4.0",
+    "@mongodb-js/compass-export-to-language": "^2.5.0",
     "@mongodb-js/compass-find-in-page": "^1.1.0",
     "@mongodb-js/compass-import-export": "^1.1.0",
     "@mongodb-js/compass-instance": "^1.1.0",
@@ -288,6 +288,7 @@
     "mapbox-gl": "^0.39.1",
     "marky": "^1.2.0",
     "moment": "^2.10.6",
+    "mongodb": "^3.1.9",
     "mongodb-ace-autocompleter": "^0.0.21",
     "mongodb-ace-mode": "^0.0.2",
     "mongodb-ace-theme": "^0.0.1",
