COMPASS-3196: Bump Node driver dependencies

--- a/package.json
+++ b/package.json
@@ -231,9 +231,9 @@
     "@mongodb-js/compass-collection-stats": "^3.0.1",
     "@mongodb-js/compass-connect": "^3.4.6",
     "@mongodb-js/compass-crud": "^5.3.8",
-    "@mongodb-js/compass-deployment-awareness": "^6.1.1",
+    "@mongodb-js/compass-deployment-awareness": "^6.1.2",
     "@mongodb-js/compass-document-validation": "^8.0.3",
-    "@mongodb-js/compass-export-to-language": "^2.3.2",
+    "@mongodb-js/compass-export-to-language": "^2.3.4",
     "@mongodb-js/compass-find-in-page": "^1.0.2",
     "@mongodb-js/compass-import-export": "^1.0.4",
     "@mongodb-js/compass-instance": "^1.0.1",
@@ -288,6 +288,7 @@
     "mapbox-gl": "^0.39.1",
     "marky": "^1.2.0",
     "moment": "^2.10.6",
+    "mongodb": "^3.1.9",
     "mongodb-ace-autocompleter": "^0.0.21",
     "mongodb-ace-mode": "^0.0.2",
     "mongodb-ace-theme": "^0.0.1",
