--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ addons:
       - libstdc++6
 before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
-  - npm i -g npm node-gyp
+  - npm i -g npm@latest
 install:
-  - npm install
+  - npm ci
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
@@ -33,8 +33,6 @@ script:
 #   - export ARTIFACTS_PATHS="$HOME/.npm/_logs/*.log"
 #   - artifacts upload
 
-# cache:
-#   directories:
-#     - '$HOME/.npm'
-#     - '$HOME/.electron'
-#     - './node_modules'
+cache:
+  directories:
+    - '$HOME/.npm'
