--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "posttest": "mongodb-runner stop --port 27017",
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "clean": "hadron-build clean",
+    "postinstall": "electron-rebuild",
     "compile-ui": "hadron-build ui",
     "release": "hadron-build release",
     "test-unit": "npm test -- --unit",
