--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "pretest": "mongodb-runner start --port 27017",
     "test": "hadron-build test",
     "posttest": "mongodb-runner stop --port 27017",
+    "postinstall": "electron-rebuild",
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
