--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "MongoDB Compass",
   "description": "The MongoDB GUI",
   "homepage": "https://compass.mongodb.com",
-  "version": "1.18.0-dev",
+  "version": "1.17.0-dev",
   "apiVersion": "2.0.0",
   "main": "src/main.js",
   "author": {
@@ -207,7 +207,6 @@
     "check": "mongodb-js-precommit './src/**/*{.js,.jsx}' './test/**/*.js'",
     "clean": "hadron-build clean",
     "compile-ui": "hadron-build ui",
-    "postinstall": "electron-rebuild -o kerberos,keytar",
     "release": "hadron-build release",
     "test-unit": "npm test -- --unit",
     "test-enzyme": "npm test -- --enzyme",
@@ -225,28 +224,28 @@
     "url": "git://github.com/10gen/compass.git"
   },
   "dependencies": {
-    "@mongodb-js/compass-aggregations": "^2.2.2",
-    "@mongodb-js/compass-auth-kerberos": "^1.2.0",
-    "@mongodb-js/compass-auth-ldap": "^1.2.0",
-    "@mongodb-js/compass-auth-x509": "^1.2.0",
-    "@mongodb-js/compass-auto-updates": "^0.2.0",
-    "@mongodb-js/compass-collection-stats": "^3.2.0",
-    "@mongodb-js/compass-connect": "^3.8.0",
-    "@mongodb-js/compass-crud": "^6.1.2",
-    "@mongodb-js/compass-deployment-awareness": "^6.4.0",
-    "@mongodb-js/compass-document-validation": "^8.2.0",
-    "@mongodb-js/compass-export-to-language": "^2.5.0",
-    "@mongodb-js/compass-find-in-page": "^1.1.0",
-    "@mongodb-js/compass-import-export": "^1.1.0",
-    "@mongodb-js/compass-instance": "^1.1.0",
-    "@mongodb-js/compass-license": "^1.1.0",
-    "@mongodb-js/compass-plugin-info": "^1.1.0",
-    "@mongodb-js/compass-query-bar": "^2.0.0",
-    "@mongodb-js/compass-query-history": "^3.1.0",
-    "@mongodb-js/compass-server-version": "^2.1.0",
-    "@mongodb-js/compass-serverstats": "^12.2.0",
-    "@mongodb-js/compass-ssh-tunnel-status": "^2.1.0",
-    "@mongodb-js/compass-status": "^3.1.0",
+    "@mongodb-js/compass-aggregations": "1.8.5",
+    "@mongodb-js/compass-auth-kerberos": "1.0.1",
+    "@mongodb-js/compass-auth-ldap": "1.0.1",
+    "@mongodb-js/compass-auth-x509": "1.0.1",
+    "@mongodb-js/compass-auto-updates": "0.0.3",
+    "@mongodb-js/compass-collection-stats": "3.0.2",
+    "@mongodb-js/compass-connect": "3.4.3",
+    "@mongodb-js/compass-crud": "5.3.8",
+    "@mongodb-js/compass-deployment-awareness": "6.1.2",
+    "@mongodb-js/compass-document-validation": "8.0.3",
+    "@mongodb-js/compass-export-to-language": "2.3.3",
+    "@mongodb-js/compass-find-in-page": "1.0.2",
+    "@mongodb-js/compass-import-export": "1.0.5",
+    "@mongodb-js/compass-instance": "1.0.3",
+    "@mongodb-js/compass-license": "1.0.1",
+    "@mongodb-js/compass-plugin-info": "1.0.1",
+    "@mongodb-js/compass-query-bar": "1.0.31",
+    "@mongodb-js/compass-query-history": "3.0.2",
+    "@mongodb-js/compass-server-version": "2.0.2",
+    "@mongodb-js/compass-serverstats": "12.1.0",
+    "@mongodb-js/compass-ssh-tunnel-status": "2.0.1",
+    "@mongodb-js/compass-status": "3.0.3",
     "ampersand-collection": "^1.5.0",
     "ampersand-collection-filterable": "^0.2.1",
     "ampersand-dom-bindings": "^3.7.0",
@@ -271,11 +270,11 @@
     "hadron-app-registry": "^7.1.0",
     "hadron-auto-update-manager": "^2.0.0",
     "hadron-compile-cache": "^1.0.1",
-    "hadron-document": "^5.0.4",
+    "hadron-document": "^4.0.0",
     "hadron-ipc": "^1.1.0",
     "hadron-module-cache": "^0.0.3",
     "hadron-plugin-manager": "^5.3.0",
-    "hadron-react-bson": "^3.0.1",
+    "hadron-react-bson": "^3.0.0",
     "hadron-react-buttons": "^3.0.0",
     "hadron-react-components": "^3.0.0",
     "hadron-style-manager": "^0.1.0",
@@ -296,9 +295,9 @@
     "mongodb-ace-theme": "^0.0.1",
     "mongodb-ace-theme-query": "^0.0.2",
     "mongodb-collection-model": "^1.0.0",
-    "mongodb-connection-model": "^12.5.1",
+    "mongodb-connection-model": "^12.5.0",
     "mongodb-core": "^3.1.8",
-    "mongodb-data-service": "^12.4.3",
+    "mongodb-data-service": "^12.4.0",
     "mongodb-database-model": "^0.1.3",
     "mongodb-explain-plan-model": "^0.2.2",
     "mongodb-extended-json": "^1.10.0",
