--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -119,6 +119,13 @@ functions:
           echo "Attempting to install with npm config"
           npm config list -l
 
+
+          echo "project npmrc"
+          cat .npmrc
+
+          echo "user npmrc"
+          cat ~/.npmrc
+
           echo "Installing Compass dependencies..."
           echo "If npm ci fails, debug.log will be uploaded to S3."
           npm ci 
